--- a/test/makefile
+++ b/test/makefile
@@ -1,7 +1,7 @@
 all:client server
 
 server:tcpserver.cpp
-	g++ -g -o server tcpserver.cpp
+	g++ -g -o server tcpserver.cpp -lpthread
 
 client:tcpclient.cpp
 	g++ -g -o client tcpclient.cpp
