--- a/test/makefile
+++ b/test/makefile
@@ -1,10 +1,16 @@
 all:client server
 
-server:tcpserver.cpp
-	g++ -g -o server tcpserver.cpp -lpthread
+response.o:response.cpp response.h
+	g++ -c  response.cpp response.h
+
+tcpserver.o:tcpserver.cpp
+	g++ -c  tcpserver.cpp -lpthread
+
+server:tcpserver.o response.o
+	g++ -g -o server tcpserver.o response.o -lpthread
 
 client:tcpclient.cpp
 	g++ -g -o client tcpclient.cpp
 
 clean:
-	rm server client
+	rm *.h.gch *.o server client
