--- a/srccode/makefile
+++ b/srccode/makefile
@@ -3,17 +3,17 @@ all:client server
 init.o:init.c init.h
 	g++ -g -c init.c init.h
 
-response.o:response.c response.h init.h thread.h
+response.o:response.c response.h
 	g++ -g -c response.c response.h
 
 thread.o:thread.c thread.h
-	g++ -g -c thread.c thread.h -lpthread
+	g++ -g -c thread.c thread.h
 
-epoll.o:epoll.c epoll.h response.h thread.h
-	g++ -g -c epoll.c epoll.h -lpthread
+epoll.o:epoll.c epoll.h
+	g++ -g -c epoll.c epoll.h
 
 tcpserver.o:tcpserver.c
-	g++ -g -c  tcpserver.c -lpthread
+	g++ -g -c  tcpserver.c
 
 server:tcpserver.o response.o init.o thread.o epoll.o
 	g++ -g -o server tcpserver.o response.o init.o thread.o epoll.o -lpthread
